k8s-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-redirector
spec:
  replicas: 3
  selector:
    matchLabels:
      app: url-redirector
  template:
    metadata:
      labels:
        app: url-redirector
    spec:
      automountServiceAccountToken: false
      containers:
      - name: url-redirector
        image: registry.gitlab.com/bobymcbobs/url-redirector:1.0.0
        securityContext:
          readOnlyRootFilesystem: true
          privileged: false
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        volumeMounts:
          - name: url-redirector-data
            mountPath: /opt/redirector/cfg
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 20
      volumes:
        - name: url-redirector-data
          configMap:
            name: url-redirector-data
            items:
              - key: config.yaml
                path: config.yaml
