k8s-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-redirector
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: url-redirector
