k8s-deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: url-redirector
spec:
  rules:
  - host: my.host.com
    http:
      paths:
      - path: /
        backend:
          serviceName: url-redirector
          servicePort: 8080
